[#60] receive promotion email flag
